--- a/css/style.css
+++ b/css/style.css
@@ -15,13 +15,17 @@ nav ul {
 }
 
 #info-ramos {
-    padding: 50px 20px;
+    padding: 20px 20px;
     text-align: left;
     background-color: rgb(230, 139, 35);
 }
 
 #registrarse {
-    padding: 50px 20px;
+    padding: 20px 20px;
     text-align: left;
     background-color: rgb(35, 230, 129);
+}
+
+#registrarse h2 {
+    font-size: 1.5rem;
 }
