--- a/style.css
+++ b/style.css
@@ -1,1 +1,27 @@
 /* CSS para darle estilo a la floreria*/
+*{
+    margin: 0;
+    padding: 0;
+}
+
+header{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background-color: rgb(160, 30, 56);
+    padding: 5px 40px;
+}
+
+header .logo img {
+    height: 50px;
+}
+
+nav ul{
+    list-style: none;
+    display: flex;
+    gap: 20px;
+    float: right;
+    margin: 0px 10px;
+    text-decoration: none;
+}
+
