--- a/style.css
+++ b/style.css
@@ -25,6 +25,16 @@ nav ul{
     gap: 20px;
     float: right;
     margin: 0px 10px;
+    
+}
+
+nav a {
     text-decoration: none;
+    color: aliceblue;
+    font: 15px Ubuntu;
+}
+
+nav a:hover { text-shadow: 5px 5px 2px rgba(221, 255, 215, 0.9);
+
 }
 
