insertando color de fondo y acomodando titulo

--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@
 *{
     margin: 0;
     padding: 0;
+    
 }
 
 header{
@@ -31,10 +32,22 @@ nav ul{
 nav a {
     text-decoration: none;
     color: aliceblue;
-    font: 15px Ubuntu;
+    font-family:Ubuntu;
 }
 
 nav a:hover { text-shadow: 5px 5px 2px rgba(221, 255, 215, 0.9);
 
 }
 
+
+h1 {
+    font-family:Ubuntu;
+    font-size: 40px;
+    color: rgba(255, 255, 255, 0.959);
+    text-align: center;
+
+}
+
+body {
+    background:  #65d4b6;
+}
