--- a/style.css
+++ b/style.css
@@ -40,14 +40,24 @@ nav a:hover { text-shadow: 5px 5px 2px rgba(221, 255, 215, 0.9);
 }
 
 
+.contenido-inicio p {
+    text-align: center;
+    font-style: oblique;
+    height: 20px;
+}
+
 h1 {
-    font-family:Ubuntu;
+
+    font-family: Cambria;
     font-size: 40px;
     color: rgba(255, 255, 255, 0.959);
     text-align: center;
-
+    text-shadow: 10px 10px 4px #cafff8;
+    
 }
+
 
 body {
     background:  #65d4b6;
 }
+
