--- a/style.css
+++ b/style.css
@@ -32,10 +32,12 @@ nav ul{
 nav a {
     text-decoration: none;
     color: aliceblue;
-    font-family:Ubuntu;
+    font-style: italic;
+
 }
 
-nav a:hover { text-shadow: 5px 5px 2px rgba(221, 255, 215, 0.9);
+nav a:hover { 
+    text-decoration-line: underline;
 
 }
 
