--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,61 @@
 /* CSS para darle estilo a la floreria*/
-<<<<<<< HEAD
+
+* {
+    margin: 0;
+    padding: 0;
+}
+
+header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background-color: rgba(36, 143, 84, 0.945);
+    padding: 5px 40px;
+}
+
+header .logo img {
+    height: 50px;
+    width: 50px;
+    border-radius: 50%;
+    overflow: hidden;
+}
+
+nav ul {
+    list-style: none;
+    display: flex;
+    gap: 20px;
+    float: right;
+    margin: 0px 10px;
+}
+
+nav a {
+    text-decoration: none;
+    color: aliceblue;
+    font-style: italic;
+}
+
+nav a:hover {
+    text-decoration-line: underline;
+}
+
+.contenido-inicio p {
+    text-align: center;
+    font-style: oblique;
+    height: 20px;
+    color: #3b275f;
+}
+
+h1 {
+    font-family: Cambria;
+    font-size: 60px;
+    color: rgba(255, 255, 255, 0.959);
+    text-align: center;
+    text-shadow: 10px 10px 4px #cafff8;
+}
+
+body {
+    background: #65d4b6;
+}
 
 
 /* estilo para seccion Informacion sobre los ramos */
@@ -43,7 +99,7 @@
     margin: 20px;
     padding: 20px 20px;
     text-align: center;
-    background-color: #49ba9c;
+    background: linear-gradient(90deg, #28b18c, #00e691);
     border-radius: 10px;
 }
 
@@ -60,6 +116,7 @@
 #registrarse p,
 #nosotros p,
 #info-ramos p {
+    padding: 10px;
     font-size: 1rem;
 }
 
@@ -89,71 +146,7 @@
 .registrarse #registrarse {
     width: 30%;
     color: antiquewhite;
-    border-radius: 10px;
+    border-radius: 150px;
     border: 1px solid #1f3644;
-    background-color: rgb(145, 117, 176);
-=======
-*{
-    margin: 0;
-    padding: 0;
-    
-}
-
-header{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    background-color: rgba(36, 143, 84, 0.945);
-    padding: 5px 40px;
-}
-
-header .logo img {
-    height: 50px;
-    width: 50px;
-    border-radius: 50%;
-    overflow: hidden;
-}
-
-nav ul{
-    list-style: none;
-    display: flex;
-    gap: 20px;
-    float: right;
-    margin: 0px 10px;
-    
-}
-
-nav a {
-    text-decoration: none;
-    color: aliceblue;
-    font-style: italic;
-
-}
-
-nav a:hover { 
-    text-decoration-line: underline;
-
-}
-
-
-.contenido-inicio p {
-    text-align: center;
-    font-style: oblique;
-    height: 20px;
-    color: #3b275f ;
-}
-
-h1 {
-
-    font-family: Cambria;
-    font-size: 60px;
-    color: rgba(255, 255, 255, 0.959);
-    text-align: center;
-    text-shadow: 10px 10px 4px #cafff8;
-    
-}
-
-body {
-    background:  #65d4b6;
->>>>>>> upstream/master
+    background: linear-gradient(135deg, rgb(0, 204, 99), #9248ad);
 }
