--- a/css/style.css
+++ b/css/style.css
@@ -123,58 +123,53 @@ span {
     }
     
 }
-/*#muestra3{
-    animation: cambioOp 3s 1s, cambioOp1 3s 1s;
+
+#muestra1{   
+    opacity: 1;
 }
 #muestra2{
-    animation: cambioOp  1s;
-    animation-delay: 4s;
-}
-#muestra1{   
     opacity: 0;  
-    animation: cambioOp 1s;
-    animation-delay: 6s;
+    animation: cambioOp 3s;
+    animation-delay: 1s;
+}
+#muestra3{
+    opacity: 0;
+    animation: cambioOp 3s;
+    animation-delay: 2s;
 }
 
 #muestra4{    
     opacity: 0;
-    animation: cambioOp 1s;
-    animation-delay: 9s;
-    animation-duration: 6s;
+    animation: cambioOp 3s;
+    animation-delay: 3s;
 }
 #muestra5{    
     opacity: 0;
-    animation: cambioOp 1s;
-    animation-delay: 12s;
-    animation-duration: 6s;
+    animation: cambioOp 3s;
+    animation-delay: 4s;
 }
 #muestra6{    
     opacity: 0;
-    animation: cambioOp 1s;
-    animation-delay: 15s;
-    animation-duration: 6s;
+    animation: cambioOp 3s;
+animation-delay: 5s;
 }
 #muestra7{    
     opacity: 0;
-    animation: cambioOp 1s;
-    animation-delay: 18s;
-    animation-duration: 6s;
+    animation: cambioOp 3s;
+animation-delay: 6s;
 }
 #muestra8{    
     opacity: 0;
-    animation: cambioOp 1s;
-    animation-delay: 21s;
-    animation-duration: 6s;
+    animation: cambioOp 3s;
+animation-delay: 7s;
 }
 #muestra9{    
     opacity: 0;
-    animation: cambioOp 1s;
-    animation-delay: 24s;
-    animation-duration: 6s;
+    animation: cambioOp 3s;
+animation-delay: 8s;
 }
 #muestra10{    
     opacity: 0;
-    animation: cambioOp 1s;
-    animation-delay: 27s;
-    animation-duration: 6s;
-} */
+    animation: cambioOp 3s;
+animation-delay: 9s;
+} 
