--- a/css/stylecategoria.css
+++ b/css/stylecategoria.css
@@ -10,10 +10,16 @@
     text-align: left;
 }
 
-#img{
+div{
     width: 200px;
     height: 200px;
     overflow: hidden;
     margin: 20px;
 }
 
+#img {
+    width: 100%;
+    height: 100%;
+    transition: 0.5s;
+    object-fit: cover;
+}
