--- a/css/stylecategoria.css
+++ b/css/stylecategoria.css
@@ -2,6 +2,21 @@
     margin: 0%;
     padding: 0%;
 }
+header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background-color: #b4cc4e;
+    padding: 5px 40px;
+}
+
+header .logo img {
+    height: 50px;
+    width: 50px;
+    border-radius: 50%;
+    overflow: hidden;
+}
+
 
 #titulo h2 {
     font-family: 'Tahoma';
@@ -17,9 +32,3 @@ div{
     margin: 20px;
 }
 
-#img {
-    width: 100%;
-    height: 100%;
-    transition: 0.5s;
-    object-fit: cover;
-}
