--- a/css/stylecategoria.css
+++ b/css/stylecategoria.css
@@ -17,6 +17,23 @@ header .logo img {
     overflow: hidden;
 }
 
+nav ul {
+    list-style: none;
+    display: flex;
+    gap: 20px;
+    float: right;
+    margin: 0px 10px;
+}
+
+nav a {
+    text-decoration: none;
+    color: aliceblue;
+    font-style: italic;
+}
+
+nav a:hover {
+    text-decoration-line: underline;
+}
 
 #titulo h2 {
     font-family: 'Tahoma';
