--- a/css/stylecategoria.css
+++ b/css/stylecategoria.css
@@ -40,7 +40,7 @@ body {
     background-color: #853a76;
     background-repeat: no-repeat;
     background-size: cover;
-    color: #505050;
+    color: #ffffff;
     font-family: "Roboto",sans-serif;
     font-size: 13px;
     font-weight: normal;
@@ -63,3 +63,6 @@ body {
     color:  #b4cc4e;
     text-align: left;
 }
+
+
+
