--- a/registro html/registro_estilo.css
+++ b/registro html/registro_estilo.css
@@ -1,3 +1,49 @@
-h1 {
-    background-color: rgb(96, 150, 196);
-}
+ /* header {
+     display: flex;
+     justify-content: space-between;
+     align-items: center;
+     background-color: rgba(36, 143, 84, 0.945);
+     padding: 5px 40px;
+ }
+ 
+ header .logo img {
+     height: 50px;
+     width: 50px;
+     border-radius: 50%;
+     overflow: hidden;
+ }
+ 
+ nav ul {
+     list-style: none;
+     display: flex;
+     gap: 20px;
+     float: right;
+     margin: 0px 10px;
+ }
+ 
+ nav a {
+     text-decoration: none;
+     color: aliceblue;
+     font-style: italic;
+ }
+ 
+ nav a:hover {
+     text-decoration-line: underline;
+ }
+ 
+ 
+ body {
+     background: #65d4b6;
+ }
+ 
+ body {
+     background: linear-gradient(20deg, #00bbff, #3ae9d5);
+ }
+ 
+ body {
+     background: #65d4b6;
+ }
+ 
+ .registro {
+     background-color: rgb(96, 150, 196);
+ } */
