corrigiendo codigo en css

--- a/css/stylecategoria.css
+++ b/css/stylecategoria.css
@@ -64,14 +64,10 @@ h2 {
     text-align: left;
 }
 
-#img{
+div .img{
     margin: 10px 20px;
     box-shadow: 0 4px 8px 0 floralwhite, 0 6px 20px 0 rgb(0, 0,0,0.19);
     float: left;
     width: 350px;
 }
 
-div.img productos{
-    width: 100%;
-    height: auto;
-}
