--- a/registro html/registro_estilo.css
+++ b/registro html/registro_estilo.css
@@ -1,9 +1,9 @@
- /* header {
+ header {
      display: flex;
      justify-content: space-between;
      align-items: center;
-     background-color: rgba(36, 143, 84, 0.945);
-     padding: 5px 40px;
+     background-color: rgba(45, 12, 103, 0.945);
+     padding: 5px 20px;
  }
  
  header .logo img {
@@ -11,6 +11,10 @@
      width: 50px;
      border-radius: 50%;
      overflow: hidden;
+ }
+ 
+ header .encabezado h1 {
+     justify-content: left;
  }
  
  nav ul {
@@ -31,19 +35,10 @@
      text-decoration-line: underline;
  }
  
- 
- body {
-     background: #65d4b6;
- }
- 
- body {
-     background: linear-gradient(20deg, #00bbff, #3ae9d5);
- }
- 
- body {
-     background: #65d4b6;
- }
- 
  .registro {
+     width: 100%;
+     height: 100%;
+     padding: 0;
+     margin: 0;
      background-color: rgb(96, 150, 196);
- } */
+ }
