--- a/registro html/registro_estilo.css
+++ b/registro html/registro_estilo.css
@@ -1,44 +1,71 @@
- header {
-     display: flex;
-     justify-content: space-between;
-     align-items: center;
-     background-color: rgba(45, 12, 103, 0.945);
-     padding: 5px 20px;
- }
- 
- header .logo img {
-     height: 50px;
-     width: 50px;
-     border-radius: 50%;
-     overflow: hidden;
- }
- 
- header .encabezado h1 {
-     justify-content: left;
- }
- 
- nav ul {
-     list-style: none;
-     display: flex;
-     gap: 20px;
-     float: right;
-     margin: 0px 10px;
- }
- 
- nav a {
-     text-decoration: none;
-     color: aliceblue;
-     font-style: italic;
- }
- 
- nav a:hover {
-     text-decoration-line: underline;
- }
- 
- .registro {
-     width: 100%;
-     height: 100%;
-     padding: 0;
-     margin: 0;
-     background-color: rgb(96, 150, 196);
- }
+  body {
+      margin: 0;
+      padding: 0;
+      background-color: #277647;
+  }
+  
+  header {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      background-color: #b4cc4e;
+      padding: 10px 20px;
+  }
+  
+  header .logo img {
+      height: 50px;
+      width: 50px;
+      border-radius: 50%;
+      overflow: hidden;
+  }
+  
+  nav ul {
+      list-style: none;
+      display: flex;
+      gap: 30px;
+      float: right;
+      margin: 0px 10px;
+  }
+  
+  nav a {
+      text-decoration: none;
+      color: aliceblue;
+      font-style: italic;
+  }
+  
+  nav a:hover {
+      text-decoration-line: underline;
+  }
+  
+  .titulo {
+      font-style: italic;
+      color: aliceblue;
+  }
+  
+  .registro {
+      padding: 10px 20px;
+      background-color: #4b0c3b;
+      color: antiquewhite;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      text-align: left;
+  }
+  
+  .registro h2 {
+      font-size: 3rem;
+      color: #b4cc4e;
+  }
+  
+  .registro form {
+      padding: 20px 50px;
+      background: linear-gradient(170deg, #277647, #ffc600);
+      border-radius: 5px;
+      max-width: 600px;
+      margin: 0 auto;
+  }
+  
+  .registro label {
+      display: block;
+      margin-bottom: 10px;
+  }
