--- a/registro html/registro_estilo.css
+++ b/registro html/registro_estilo.css
@@ -53,15 +53,24 @@
   }
   
   .registro h2 {
+      display: flex;
+      letter-spacing: -1;
+      position: relative;
       font-size: 3rem;
+      align-items: center;
       color: #b4cc4e;
+      padding-left: 30px;
   }
   
   .registro form {
-      padding: 20px 50px;
-      background: linear-gradient(170deg, #277647, #ffc600);
-      border-radius: 5px;
-      max-width: 600px;
+      display: flex;
+      border-radius: 20px;
+      flex-direction: column;
+      gap: 10px;
+      padding: 20px 30px;
+      background: linear-gradient(170deg, #853a76, #ffc600);
+      border-radius: 15px;
+      max-width: 350px;
       margin: 0 auto;
   }
   
