--- a/css/stylecategoria.css
+++ b/css/stylecategoria.css
@@ -64,23 +64,23 @@ h2 {
     text-align: left;
 }
 
-div .img{
-    margin: 10px 20px;
-    box-shadow: 0 4px 8px 0 floralwhite, 0 6px 20px 0 rgb(0, 0,0,0.19);
+div.img{
+    margin: 10px;
+    box-shadow: 0 4px 4px 0 floralwhite, 0 6px 20px 0 rgb(0, 0,0,0.19);
     float: left;
     width: 350px;
 }
 
 div.img img{
-    width: 100%;
+    width: 15%;
     height: auto;
 }
 
-div.img: :hover{
-   
+div.img :hover{
+    
 }
 
-div.texto_info{
+div .texto_info{
     text-align: center;
     text-shadow: 2px 2px 5px black;
     padding: 10px;
