--- a/css/stylecategoria.css
+++ b/css/stylecategoria.css
@@ -67,8 +67,9 @@ h2 {
 div.img{
     margin: 10px;
     box-shadow: 0 4px 4px 0 floralwhite, 0 6px 20px 0 rgb(0, 0,0,0.19);
-    float: left;
-    width: 350px;
+    float:left;
+    width: 250px;
+    height: 250px;
 }
 
 div.img img{
