--- a/css/stylecategoria.css
+++ b/css/stylecategoria.css
@@ -73,9 +73,12 @@ div.img{
 }
 
 div.img img{
-    width: 15%;
-    height: auto;
+    width: 150px;
+    height: 150px;
+    padding-top: 15%;
+    padding-left: 20%;
 }
+
 
 div.img :hover{
     border: 1px #00000000;
