--- a/registro html/registro_estilo.css
+++ b/registro html/registro_estilo.css
@@ -68,7 +68,7 @@
       flex-direction: column;
       gap: 10px;
       padding: 20px 30px;
-      background: linear-gradient(170deg, #853a76, #ffc600);
+      background: linear-gradient(170deg, #853a76, #277647);
       border-radius: 15px;
       max-width: 350px;
       margin: 0 auto;
