--- a/css/stylecategoria.css
+++ b/css/stylecategoria.css
@@ -61,7 +61,7 @@ h2 {
     font-family: 'Tahoma';
     font-size: 20px;
     color:  #b4cc4e;
-    text-align: left;
+    text-align: center;
 }
 
 div.img{
