dando medidas a caja de inicio

--- a/pedidos/css/style.css
+++ b/pedidos/css/style.css
@@ -29,3 +29,82 @@ nav a {
 nav a:hover {
     text-decoration-line: underline;
 }
+
+@font-face {
+    font-family: "calibri";
+    src: url("../../css/fuentes/calibri_freefontdownload_org/calibri.ttf");
+}
+
+
+.caja_cent {
+    display: grid;
+    justify-content: center;
+    align-items: center;
+    margin: 50px;
+
+}
+
+#inicio{
+    display: grid;
+    width: 700px;
+    grid-template-rows: 100px 40px 40px 70px;
+    background-color: aqua;
+    justify-items: center;
+    align-items: center;
+    border-radius: 40px;
+}
+
+#agranda{
+    display: grid;
+    justify-content: center;
+    align-items: center;
+    background-color: rgba(255, 255, 255, 0);
+     width: 710px;
+    height: 260px;
+    border-radius: 40px;
+    transition: background-color 0.5s ease;
+
+}
+#agranda:hover{
+    background-color: aqua;
+}
+
+h1{
+    font-family: "calibri";
+    font: 50px;
+    text-decoration: none;
+    color: #284f52;
+    font-size: 45px;
+    margin: 0;
+}
+
+p{
+font-family: "calibri" ;
+font-size: 20px;
+}
+
+#linkCat{
+    font-family: "calibri";
+    font-size: 20px;
+    text-decoration: none;
+    padding: 10px 20px;
+    border: 3px solid #ff0000 ;
+    border-radius: 20px;
+    background-color: blueviolet;
+    transition: background-color 0.3s ease;
+}
+
+#linkCat:hover{
+    text-decoration: underline;
+    background-color: #ff0000;
+}
+
+#flores{
+    display: grid;
+    width: 1050px;
+    grid-template-columns: 100px 40px 40px 70px;
+    background-color: aqua;
+    justify-items: center;
+    align-items: center;
+    border-radius: 40px;
+}
