--- a/registro html/registro_estilo.css
+++ b/registro html/registro_estilo.css
@@ -69,7 +69,7 @@
           flex-direction: column;
           gap: 10px;
           margin: 0 auto;
-          padding: 20px 70px;
+          padding: 30px 70px;
           background: linear-gradient(170deg, #853a76, #277647);
           max-width: 350px;
           border-radius: 20px;
@@ -80,6 +80,11 @@
           display: block;
           margin-bottom: 5px;
           margin-top: 25px;
+      }
+      
+      .datos input {
+          width: 100%;
+          padding: 10px 15px;
       }
       
       .registro input::placeholder {
