cambio nombre de clase CHECKBOX por MARCAR

--- a/registro html/registro_estilo.css
+++ b/registro html/registro_estilo.css
@@ -109,7 +109,7 @@
           background-color: #853a76;
       }
       
-      .checkbox {
+      .marcar {
           display: flex;
           flex-direction: row-reverse;
           align-items: center;
