Copiando formato de la pagina principal

--- a/registro html/registro_estilo.css
+++ b/registro html/registro_estilo.css
@@ -115,3 +115,7 @@
           align-items: center;
           gap: 20px;
       }
+      
+      .marcar .checkbox {
+          cursor: pointer;
+      }
