adaptando clase del titulo en CSS

--- a/registro html/registro_estilo.css
+++ b/registro html/registro_estilo.css
@@ -43,7 +43,7 @@
           color: aliceblue;
       }
       
-      .contenido-inicio p {
+      .contenedor-titulo p {
           text-align: center;
           font-style: oblique;
           height: 20px;
