--- a/registro html/registro_estilo.css
+++ b/registro html/registro_estilo.css
@@ -9,9 +9,14 @@
       
       header {
           display: flex;
+          justify-content: space-between;
           align-items: center;
           background-color: #b4cc4e;
           padding: 5px 40px;
+      }
+      
+      .contenedor-logotitulo {
+          display: flex;
       }
       
       header .logo img {
@@ -40,8 +45,8 @@
       }
       
       header .titulo {
+          margin: 10px;
           justify-content: left;
-          background-color: #124a24;
           font-size: 1rem;
           font-style: italic;
           color: aliceblue;
